--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,6 @@
-.body {
-    
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+
+body {
+    letter-spacing: -0.05em;
+    font-family: "DM Sans", sans-serif;
 }
